kubernetes/loki/overlays/okd/route.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: loki
  namespace: loki
  labels:
    blackbox: ignore
    app.kubernetes.io/instance: loki
  annotations:
    route.openshift.io/termination: edge
spec:
  ingressClassName: openshift-default
  rules:
    - host: loki.app.okd.homelab.arthurvardevanyan.com
      http:
        paths:
          - path: ""
            pathType: ImplementationSpecific
            backend:
              service:
                name: loki
                port:
                  name: http-metrics
